--- a/src/Components/Recommended/Recommended.css
+++ b/src/Components/Recommended/Recommended.css
@@ -11,6 +11,7 @@
 .side-video-list img {
 	flex-basis: 49%;
 	width: 50%;
+	border-radius: 5px;
 }
 
 .vid-info {
@@ -18,6 +19,11 @@
 }
 
 .vid-info h4 {
-	font-size: 13px;
-	margin-bottom: 10px;
+	margin-bottom: 5px;
+}
+
+@media (max-width: 900px) {
+	.recommended {
+		flex-basis: 100%;
+	}
 }
