--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -13,7 +13,7 @@
 	margin-right: 20px;
 }
 
-.side-links {
+.side-link {
 	display: flex;
 	align-items: center;
 	margin-bottom: 20px;
@@ -45,10 +45,7 @@
 	width: 5%;
 }
 
-.small-sidebar p {
-	display: none;
-}
-
+.small-sidebar p,
 .small-sidebar h3 {
 	display: none;
 }
@@ -58,13 +55,13 @@
 	margin-bottom: 25px;
 }
 
-.small-sidebar img:hover {
-	background: red;
-	border-radius: 50%;
-	padding: 5%;
-}
-
-.side-links.active img {
+.side-link.active img {
 	padding-bottom: 2px;
 	border-bottom: 3px solid red;
+}
+
+@media (max-width: 900px) {
+	.sidebar {
+		display: none;
+	}
 }
